# fisk-ai-utvikling

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  models.txt  pyproject.toml
app/: __main__.py  common.py  dummy_script.py  execute_process.py  logger.py  main.py  settings.py  style.py  timer.py
app/data_manager/: data_manager.py
app/detection/: __main__.py  batch_yolov8.py  detection.py  frame_grabber.py  main.py
app/report_manager/: report_manager.py
app/tests/: test_ui.py
app/vdi_perf_test/: __main__.py
app/video_processor/: __init__.py  __main__.py  main.py  video_processor.py
app/widgets/: detection_window.py  error_dialog.py  file_browser.py  review_window.py  widgets_options.py  widgets_panels.py
datasets/brackish/: annotations_to_yolo.py  create_dataset.ipynb  create_dataset_split.py  create_dummy_yolo_annotations.py  create_image_list.py  frame_extractor.py
model_research/: train.py  yolov8.ipynb
tools/annotation_distribution/: find_annotation_distribution.py
tools/find_already_annotated_videos/: compare_hashes.py  find_overlapping_videos.py  format_output.py
tools/generate_dataset/: export_review_to_yolo.py  generate_dataset.py  validate_background_images.py
